更新首頁樣式並添加時間戳

--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,33 @@
 <!DOCTYPE html>
 <html>
-  <head><title>Hello CD</title></head>
+  <head>
+    <title>Hello CD</title>
+    <style>
+      body {
+        font-family: Arial, sans-serif;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        margin: 0;
+        background-color: #f0f2f5;
+      }
+      .container {
+        text-align: center;
+        padding: 2rem;
+        background: white;
+        border-radius: 8px;
+        box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+      }
+      h1 {
+        color: #1a73e8;
+      }
+    </style>
+  </head>
   <body>
-    <h1>🚀 自動部署成功！</h1>
+    <div class="container">
+      <h1>🚀 自動部署成功！</h1>
+      <p>透過 Webhook 自動部署測試 - 更新於 ${new Date().toLocaleString()}</p>
+    </div>
   </body>
 </html>
