修正時間戳顯示方式

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,19 @@
   <body>
     <div class="container">
       <h1>🚀 自動部署成功！</h1>
-      <p>透過 Webhook 自動部署測試 - 更新於 ${new Date().toLocaleString()}</p>
+      <p>透過 Webhook 自動部署測試 - 更新於 <span id="timestamp"></span></p>
     </div>
+    <script>
+      document.getElementById('timestamp').textContent = new Date().toLocaleString('zh-TW', {
+        timeZone: 'Asia/Taipei',
+        year: 'numeric',
+        month: '2-digit',
+        day: '2-digit',
+        hour: '2-digit',
+        minute: '2-digit',
+        second: '2-digit',
+        hour12: false
+      });
+    </script>
   </body>
 </html>
