--- a/public/index.html
+++ b/public/index.html
@@ -43,6 +43,11 @@
         0%, 100% { transform: translateY(0); }
         50% { transform: translateY(-10px); }
       }
+      .timer {
+        margin-top: 1rem;
+        font-size: 0.8rem;
+        color: #9ca3af;
+      }
     </style>
   </head>
   <body>
@@ -51,10 +56,14 @@
       <h1>自動部署成功！</h1>
       <p>透過 GitHub Actions + Webhook 自動部署</p>
       <div class="timestamp">
-        更新於 <span id="timestamp"></span>
+        部署時間：<span id="timestamp"></span>
+      </div>
+      <div class="timer">
+        部署已運行：<span id="uptime">0</span> 秒
       </div>
     </div>
     <script>
+      // 設置部署時間
       document.getElementById('timestamp').textContent = new Date().toLocaleString('zh-TW', {
         timeZone: 'Asia/Taipei',
         year: 'numeric',
@@ -65,6 +74,14 @@
         second: '2-digit',
         hour12: false
       });
+
+      // 更新運行時間
+      const deployTime = new Date();
+      setInterval(() => {
+        const now = new Date();
+        const diff = Math.floor((now - deployTime) / 1000);
+        document.getElementById('uptime').textContent = diff;
+      }, 1000);
     </script>
   </body>
 </html>
