--- a/public/index.html
+++ b/public/index.html
@@ -55,7 +55,9 @@
                 <p>運行時間：<span id="uptime">0</span> 秒</p>
             </div>
             <p class="test-message">
-                測試 Webhook 部署 - 更新時間：<span id="updateTime"></span>
+                測試 Webhook 部署（含 Secret）- 更新時間：<span
+                    id="updateTime"
+                ></span>
             </p>
         </div>
 
